--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-notifications": "^0.7.2",
     "expo-permissions": "^9.3.0",
     "expo-permissions-hooks": "^1.0.5",
+    "expo-random": "^10.0.0",
     "expo-status-bar": "~1.0.2",
     "expo-web-browser": "^8.5.0",
     "formik": "^2.2.5",
@@ -43,7 +44,7 @@
     "react-native-form4u": "^0.0.3",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
-    "react-native-paper": "^4.4.1",
+    "react-native-paper": "^4.5.0",
     "react-native-permissions": "^2.2.2",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "3.1.4",
@@ -51,6 +52,7 @@
     "react-native-swipeable-row": "^0.8.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.0.0",
     "react-navigation": "^4.4.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
